@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - November 12th, 2004
 --------------------------------------------------------------------------------
+- 01-01-04: Added NPC areaset. [Tsusai]
 - 12-31-04: Added Packet tracing output switch to weiss.ini. [AlexKreuz]
 - 12-31-04: Pets did not load on server restart. [AlexKreuz]
 - 12-31-04: Bug #25: Deleting character did not remove chara gamedata. [AlexKreuz]
